// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly desktop version 1`] = `
<body>
  <div>
    <mock-fluxplusmodal
      classname="flux-login"
      hidemobilebanner="true"
    >
      <div
        class="title"
      >
        Log in or Sign Up
      </div>
      <div
        class="oauth"
      >
        <div
          class="button facebook"
        >
          Continue with Facebook
        </div>
        <div
          class="button google"
        >
          Continue with Google
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-hash ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
        role="separator"
      >
        <span
          class="ant-divider-inner-text"
        >
          or
        </span>
      </div>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash login-inputs"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-hash ant-input-outlined"
                    id="email-input"
                    placeholder="Email"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-affix-wrapper css-dev-only-do-not-override-hash ant-input-outlined ant-input-password"
                  >
                    <input
                      class="ant-input css-dev-only-do-not-override-hash"
                      id="password-input"
                      placeholder="Password"
                      type="password"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="eye-invisible"
                        class="anticon anticon-eye-invisible ant-input-password-icon"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="eye-invisible"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                          />
                          <path
                            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="options"
        >
          <div
            class="remember-me"
          >
            <input
              type="checkbox"
            />
            <div>
              Remember me
            </div>
          </div>
          <div
            class="forget-password"
          >
            Forgot Password?
          </div>
        </div>
      </form>
      <div
        class="ant-space css-dev-only-do-not-override-hash ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small footer"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
            type="button"
          >
            <span>
              Log in
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Create Your FLUX Account
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="text"
          >
            <div>
              Sign in later
            </div>
          </div>
        </div>
      </div>
    </mock-fluxplusmodal>
  </div>
</body>
`;

exports[`should render correctly desktop version 2`] = `
<body>
  <div>
    <mock-fluxplusmodal
      classname="flux-login"
      hidemobilebanner="true"
    >
      <div
        class="title"
      >
        Log in or Sign Up
      </div>
      <div
        class="oauth"
      >
        <div
          class="button facebook"
        >
          Continue with Facebook
        </div>
        <div
          class="button google"
        >
          Continue with Google
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-hash ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
        role="separator"
      >
        <span
          class="ant-divider-inner-text"
        >
          or
        </span>
      </div>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash login-inputs"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-hash ant-input-outlined"
                    id="email-input"
                    placeholder="Email"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-affix-wrapper css-dev-only-do-not-override-hash ant-input-outlined ant-input-password"
                  >
                    <input
                      class="ant-input css-dev-only-do-not-override-hash"
                      id="password-input"
                      placeholder="Password"
                      type="password"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="eye-invisible"
                        class="anticon anticon-eye-invisible ant-input-password-icon"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="eye-invisible"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                          />
                          <path
                            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="options"
        >
          <div
            class="remember-me"
          >
            <input
              type="checkbox"
            />
            <div>
              Remember me
            </div>
          </div>
          <div
            class="forget-password"
          >
            Forgot Password?
          </div>
        </div>
      </form>
      <div
        class="ant-space css-dev-only-do-not-override-hash ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small footer"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
            type="button"
          >
            <span>
              Log in
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Create Your FLUX Account
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="text"
          >
            <div>
              Sign in later
            </div>
          </div>
        </div>
      </div>
    </mock-fluxplusmodal>
  </div>
</body>
`;

exports[`should render correctly mobile version 1`] = `
<body>
  <div>
    <mock-fluxplusmodal
      classname="flux-login"
      hidemobilebanner="true"
    >
      <div
        class="title"
      >
        Log in or Sign Up
      </div>
      <div
        class="oauth"
      >
        <div
          class="button facebook"
        >
          Continue with Facebook
        </div>
        <div
          class="button google"
        >
          Continue with Google
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-hash ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
        role="separator"
      >
        <span
          class="ant-divider-inner-text"
        >
          or
        </span>
      </div>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash login-inputs"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-hash ant-input-outlined"
                    id="email-input"
                    placeholder="Email"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-affix-wrapper css-dev-only-do-not-override-hash ant-input-outlined ant-input-password"
                  >
                    <input
                      class="ant-input css-dev-only-do-not-override-hash"
                      id="password-input"
                      placeholder="Password"
                      type="password"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="eye-invisible"
                        class="anticon anticon-eye-invisible ant-input-password-icon"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="eye-invisible"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                          />
                          <path
                            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="options"
        >
          <div
            class="remember-me"
          >
            <input
              type="checkbox"
            />
            <div>
              Remember me
            </div>
          </div>
          <div
            class="forget-password"
          >
            Forgot Password?
          </div>
        </div>
      </form>
      <div
        class="ant-space css-dev-only-do-not-override-hash ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small footer"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
            type="button"
          >
            <span>
              Log in
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Create Your FLUX Account
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="text"
          >
            <div>
              Sign in later
            </div>
            <div>
              Explore FLUX+ Plans
            </div>
          </div>
        </div>
      </div>
    </mock-fluxplusmodal>
  </div>
</body>
`;

exports[`should render correctly web version 1`] = `
<body>
  <div>
    <mock-fluxplusmodal
      classname="flux-login"
      hidemobilebanner="true"
    >
      <div
        class="title"
      >
        Log in or Sign Up
      </div>
      <div
        class="oauth"
      >
        <div
          class="button facebook"
        >
          Continue with Facebook
        </div>
        <div
          class="button google"
        >
          Continue with Google
        </div>
      </div>
      <div
        class="ant-divider css-dev-only-do-not-override-hash ant-divider-horizontal ant-divider-with-text ant-divider-with-text-center"
        role="separator"
      >
        <span
          class="ant-divider-inner-text"
        >
          or
        </span>
      </div>
      <form
        class="ant-form ant-form-horizontal css-dev-only-do-not-override-hash login-inputs"
      >
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <input
                    class="ant-input css-dev-only-do-not-override-hash ant-input-outlined"
                    id="email-input"
                    placeholder="Email"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-dev-only-do-not-override-hash"
        >
          <div
            class="ant-row ant-form-item-row css-dev-only-do-not-override-hash"
          >
            <div
              class="ant-col ant-form-item-control css-dev-only-do-not-override-hash"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <span
                    class="ant-input-affix-wrapper css-dev-only-do-not-override-hash ant-input-outlined ant-input-password"
                  >
                    <input
                      class="ant-input css-dev-only-do-not-override-hash"
                      id="password-input"
                      placeholder="Password"
                      type="password"
                      value=""
                    />
                    <span
                      class="ant-input-suffix"
                    >
                      <span
                        aria-label="eye-invisible"
                        class="anticon anticon-eye-invisible ant-input-password-icon"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="eye-invisible"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                          />
                          <path
                            d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                          />
                        </svg>
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="options"
        >
          <div
            class="remember-me"
          >
            <input
              type="checkbox"
            />
            <div>
              Remember me
            </div>
          </div>
          <div
            class="forget-password"
          >
            Forgot Password?
          </div>
        </div>
      </form>
      <div
        class="ant-space css-dev-only-do-not-override-hash ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small footer"
      >
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-primary ant-btn-color-primary ant-btn-variant-solid ant-btn-block"
            type="button"
          >
            <span>
              Log in
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-block"
            type="button"
          >
            <span>
              Create Your FLUX Account
            </span>
          </button>
        </div>
        <div
          class="ant-space-item"
        >
          <div
            class="text"
          >
            <div>
              Sign in later
            </div>
          </div>
        </div>
      </div>
    </mock-fluxplusmodal>
  </div>
</body>
`;
